--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
     "require": {
-        "infobip/infobip-api-php-client": "^5.1",
-        "brolese/infobip-api-php-client": "^2.5",
-        "twilio/sdk": "^8.2"
+        "infobip/infobip-api-php-client": "^5.1"
     }
 }
